// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner accepts non-preset colors 1`] = `
<div
  className="dikRvH"
>
  <div
    className="KWrjs"
  >
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders content from children props 1`] = `
<div
  className="kfppsX"
  color="white"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10.3,16.5L6,12.2L7.2,11
	l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
        <span>
          123
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with blue bg 1`] = `
<div
  className="bZfvQQ"
  color="white"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,17h-2v-6h2V17z M13,9h-2V7
	h2V9z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with custom iconName and size 1`] = `
<div
  className="kfppsX"
  color="white"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,17.8l6.2,3.7l-1.6-7L22,9.7l-7.2-0.6L12,2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with green bg 1`] = `
<div
  className="kfppsX"
  color="white"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10.3,16.5L6,12.2L7.2,11
	l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightBlue bg 1`] = `
<div
  className="dKvFMY"
  color="darkBlue"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,17h-2v-6h2V17z M13,9h-2V7
	h2V9z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightGreen bg 1`] = `
<div
  className="bKZHoh"
  color="darkGreen"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10.3,16.5L6,12.2L7.2,11
	l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightOrange bg 1`] = `
<div
  className="bRxpHJ"
  color="darkOrange"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M1,21.5h22l-11-19L1,21.5z M13,18.5h-2v-2h2V18.5z M13,14.5h-2v-4h2V14.5z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightRed bg 1`] = `
<div
  className="fmdrPk"
  color="darkRed"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,13h-2V7h2V13z M13,17h-2v-2
	h2V17z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with no props other than theme 1`] = `
.c0 {
  background-color: #0a0;
  color: #fff;
}

.c3 {
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  text-align: left;
}

.c6 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            32,
            40,
            48,
            64,
          ],
          "colors": Object {
            "black": "#000",
            "blue": "#007aff",
            "blue0": "#cdf",
            "blue1": "#cdf",
            "blue2": "#007aff",
            "blue3": "#007aff",
            "blues": Array [
              "#cdf",
              "#cdf",
              "#007aff",
              "#007aff",
            ],
            "gray300": "#d1d6db",
            "darkBlue": "#049",
            "gray800": "#364049",
            "darkGreen": "#060",
            "darkOrange": "#a50",
            "darkPurple": "#407",
            "darkRed": "#800",
            "gray": "#687B8E",
            "gray0": "#f6f8fa",
            "gray1": "#f6f8fa",
            "gray2": "#687B8E",
            "gray3": "#687B8E",
            "green": "#0a0",
            "green0": "#cec",
            "green1": "#cec",
            "green2": "#0a0",
            "green3": "#0a0",
            "greens": Array [
              "#cec",
              "#cec",
              "#0a0",
              "#0a0",
            ],
            "lightBlue": "#cdf",
            "gray50": "#f6f8fa",
            "lightGreen": "#cec",
            "lightOrange": "#feb",
            "lightPurple": "#ecf",
            "lightRed": "#fcc",
            "orange": "#fa0",
            "orange0": "#feb",
            "orange1": "#feb",
            "orange2": "#fa0",
            "orange3": "#fa0",
            "oranges": Array [
              "#feb",
              "#feb",
              "#fa0",
              "#fa0",
            ],
            "purple": "#70b",
            "purple0": "#ecf",
            "purple1": "#ecf",
            "purple2": "#70b",
            "purple3": "#70b",
            "purples": Array [
              "#ecf",
              "#ecf",
              "#70b",
              "#70b",
            ],
            "red": "#c00",
            "red0": "#fcc",
            "red1": "#fcc",
            "red2": "#c00",
            "red3": "#c00",
            "reds": Array [
              "#fcc",
              "#fcc",
              "#c00",
              "#c00",
            ],
            "text": "#001833",
            "white": "#fff",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
          ],
          "fontWeights": Object {
            "bold": 600,
            "regular": 400,
          },
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:32em)",
            "@media screen and (min-width:40em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:64em)",
          ],
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "2px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 20 20"
      width={24}
    >
      <path
        d="M8,15,3,10,4.41,8.59,8,12.17l7.59-7.59L17,6ZM10,0A10,10,0,1,0,20,10,10,10,0,0,0,10,0Z"
      />
    </svg>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <h5
          className="c5"
          fontSize={2}
        />
        <span
          className="c6"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with orange bg 1`] = `
<div
  className="keFDZW"
  color="white"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M1,21.5h22l-11-19L1,21.5z M13,18.5h-2v-2h2V18.5z M13,14.5h-2v-4h2V14.5z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with red bg 1`] = `
<div
  className="feYWsQ"
  color="white"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,13h-2V7h2V13z M13,17h-2v-2
	h2V17z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        />
        <span
          className="ietgXR"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with text node 1`] = `
<div
  className="kfppsX"
  color="white"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,17.8l6.2,3.7l-1.6-7L22,9.7l-7.2-0.6L12,2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        >
          Header
        </h5>
        <span
          className="ietgXR"
          fontSize={1}
        >
          <div
            className="bpnyOO"
          >
            Text
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with text string 1`] = `
<div
  className="kfppsX"
  color="white"
>
  <div
    className="KWrjs"
  >
    <svg
      className="hdmghQ"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            "36em",
            "48em",
            "62em",
            "75em",
          ],
          "buttons": Object {
            "primary": Object {
              "&:hover": Object {
                "backgroundColor": "black",
              },
              "backgroundColor": "blue",
              "color": "white",
            },
          },
          "colorStyles": Object {
            "error": Object {
              "backgroundColor": "red",
              "color": "white",
            },
            "warning": Object {
              "backgroundColor": "orange",
              "color": "black",
            },
          },
          "colors": Object {
            "black": "#000000",
            "blue": "#1379C1",
            "blueGray": "#34495E",
            "blueGreen": "#16A085",
            "cobalt": "#1379C1",
            "coral": "#FC5C51",
            "crimsonRed": "#C0392B",
            "darkBlue": "#022D41",
            "darkOrange": "#D35400",
            "darkPink": "#E74C3C",
            "darkPurple": "#641F71",
            "error": "#C0392B",
            "gray100": "#F0F0F0",
            "gray200": "#E8E8E8",
            "gray300": "#D1D1D1",
            "gray400": "#BABABA",
            "gray50": "#F7F7F7",
            "gray500": "#A3A3A3",
            "gray600": "#666666",
            "gray700": "#4F4F4F",
            "gray800": "#333333",
            "gray900": "#1F1F1F",
            "lightBlue": "#4F9FD5",
            "lightOrange": "#F39C12",
            "mintGreen": "#1ABC9C",
            "orange": "#E67E22",
            "primary": "#E74C3C",
            "purple": "#8B2D9C",
            "secondary": "#8B2D9C",
            "success": "#1ABC9C",
            "text": "#333333",
            "warning": "#EDB506",
            "white": "#FFFFFF",
            "yellow": "#EDB506",
          },
          "duration": Object {
            "fast": "150ms",
            "normal": "300ms",
            "slow": "450ms",
            "slowest": "600ms",
          },
          "font": "'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
            60,
          ],
          "fontWeights": Object {
            "bold": 600,
            "light": 200,
            "medium": 500,
            "regular": 400,
            "thin": 300,
          },
          "headingFont": "halyard-display",
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "light": 200,
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:36em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:62em)",
            "@media screen and (min-width:75em)",
          ],
          "medium": 500,
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "4px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "textStyles": Object {
            "caps": Object {
              "letterSpacing": "0.2em",
              "textTransform": "uppercase",
            },
          },
          "thin": 300,
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
          "transitionDelays": Object {
            "large": "260ms",
            "medium": "160ms",
            "small": "60ms",
            "xLarge": "360ms",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,17.8l6.2,3.7l-1.6-7L22,9.7l-7.2-0.6L12,2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
      />
    </svg>
    <div
      className="gKyWBm"
    >
      <div
        className="dQEwqm"
      >
        <h5
          className="dKnfyI"
          fontFamily="halyard-display"
          fontSize={2}
        >
          Header
        </h5>
        <span
          className="ietgXR"
          fontSize={1}
        >
          Text
        </span>
      </div>
    </div>
  </div>
</div>
`;
